syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Sat Sep 10 16:54:11 CST 2016

message PBIFE_bankcardmanage_acquireBankSmsCheckCode4unBind{
	///ife/bankcardmanage/acquireBankSmsCheckCode4unBind.html

	string serialNo = 1; //,短信流水序列号,String,不校验,是,


}

message Ret_PBIFE_bankcardmanage_acquireBankSmsCheckCode4unBind{
	///ife/bankcardmanage/acquireBankSmsCheckCode4unBind.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_acquireBankSmsCheckCode4unBind data=3;


}

message REQ_PBIFE_bankcardmanage_acquireBankSmsCheckCode4unBind{
	///ife/bankcardmanage/acquireBankSmsCheckCode4unBind.html

	string payChannelNo = 1; //,支付渠道,String,不校验,否,
	
	string faceId =2; //人脸识别校验,String

	string notInterceptor =3; //不校验用户相关信息："1",String


}